Fix division in KisAlgebra2D::splitRectIntoPatches()

Here we should round the division result towards negative infinity
instead of zero point.

BUG:389034